# hades

./: .editorconfig  .flake8  .gitignore  .isort.cfg  .pylintrc  .style.yapf  Dockerfile  Makefile  README.md  demo.txt  dev-models  dump.rdb  mlmodels  mlpipeline  mypy.ini  pyproject.toml  server  utils
.github/workflows/: main.yml
carbon/: __init__.py  configs.py  redis_task.py
carbon/_temp/: config.py
carbon/mlmodels/: _test_config.py  app.py  config.py  main.py  mlmodels.json  utils.py
carbon/mlmodels/classifiers/: _test_classifier_result.py  adaboost.py  bagging.py  bernoulli_nb.py  confgin.py  decision_tree.py  gradient_boost.py  linear_sv.py  logistic_regression.py  mlp.py  multinomial_nb.py  passive_aggressive.py  ridge.py  sgd.py
carbon/mlmodels/regressors/: decision_tree.py  k_neighbors.py  linear_sv.py  mlp.py  nu_sv.py  radius_neighbors.py  sgd_nystroem.py  theilsen.py
carbon/mlpipeline/: app.py  config.py  main.py  utils.py
carbon/mlpipeline/stages/: build.py  consume.py  prepare.py  transform.py
carbon/server/: app.py  config.py  main.py  store.py  utils.py
carbon/server/routes/: __init__.py  auth.py  checks.py  models.py  pipe.py  projects.py  sse.py  uploads.py
carbon/store/: config.py
carbon/store/backend/: redis.py
configs/: jobs.json  mlmodels.json  mlpipeline.json  redis.json  server.json
configs/models/: classifier_models.json  regressor_models.json
configs/store/: classifier_models.json  queue.json
hades/mlmodels/: app.py  config.py  env.py  main.py  utils.py
hades/mlmodels/classifiers/: _test_classifier_result.py  adaboost.py  bagging.py  bernoulli_nb.py  confgin.py  decision_tree.py  gradient_boost.py  linear_sv.py  logistic_regression.py  mlp.py  multinomial_nb.py  passive_aggressive.py  ridge.py  sgd.py
hades/mlmodels/regressors/: decision_tree.py  k_neighbors.py  linear_sv.py  mlp.py  nu_sv.py  radius_neighbors.py  sgd_nystroem.py  theilsen.py
hades/mlpipeline/: app.py  env.py  utils.py
hades/mlpipeline/stages/: consume.py  prepare.py  transform.py
hades/server/: app.py  env.py  logger.py  main.py  store.py  utils.py
hades/server/auth/: env.py  validate.py
hades/server/routes/: __init__.py  auth.py  checks.py  models.py  pipe.py  projects.py  sse.py  uploads.py
hades/store/: config.py  metrics.py  queue.json  regressor_models.json
hades/store/backend/: redis.py
scripts/: format-imports.sh  format.sh  lint.sh
tests/: test_carbon.py  test_hades.py
