[tool.poetry]
name = "carbon"
version = "3.0"
description = "backend app"
authors = ["Sushant Kumar <sushant.mithila@gmail.com>", "Rajeev Ranjan <ranjanrajee@gmail.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numpy = "^1.20.3"
scipy = "^1.6.3"
pandas = "^1.2.4"
redis = "^3.5.3"
hiredis = "^2.0.0"
PyJWT = "^2.1.0"
scikit-learn = "^0.24.2"
matplotlib = "^3.4.2"
pydantic = {extras = ["email", "typing_extensions", "dotenv"], version = "^1.8.2"}
sanic = "^21.3.4"
sanic-cors = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.5b1"
isort = "^5.8.0"
flake8 = "^3.9.2"
flake8-comprehensions = "^3.5.0"
devtools = {extras = ["pygments"], version = "^0.6.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
filterwarnings = [
    "error",
]
testpaths = [
    "tests",
    "integration",
]

[tool.black]
line-length = 120
exclude = "(.eggs|.git|.hg|.mypy_cache|.pytest_cache|.ipynb_checkpoints|.nox|.tox|.venv|.svn|_build|buck-out|build|dist)"

[tool.isort]
profile = "black"
src_paths = ["carbon", "tests"]
line_length = 120

[tool.pyright]
include = ["carbon"]
extraPaths = ["carbon"]
exclude = [".venv", "**/__pycache__", "**/node_modules", "target"]
#venvPath = ".venv"

reportTypeshedErrors = false
reportUnboundVariable = "none"
reportMissingImports = true
reportMissingTypeStubs = false
reportGeneralTypeIssues = "none"

executionEnvironments = [
  { root = "./", extraPaths = ["carbon"], exclude = [".venv", "**/__pycache__", "**/node_modules", "target"] }
]
